--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,9 @@
+# Needed sudo to install rubinius-3.69
+sudo: required
+
+# The binary for rubinius-3.69 is not available for
+# ubuntu/12.04 (Precise Pangolin) but is for ubuntu/14.04 (Trusty Tahr)
+# See https://rubinius-binaries-rubinius-com.s3-us-west-2.amazonaws.com/
 dist: trusty
 
 rvm:
