--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,4 @@
-# Needed sudo to install rubinius-3.69
+# Need sudo to install rubinius-3.69
 sudo: required
 
 # The binary for rubinius-3.69 is not available for
