--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,8 @@ sudo: required
 # The binary for rubinius-3.69 is not available for
 # ubuntu/12.04 (Precise Pangolin) but is for ubuntu/14.04 (Trusty Tahr)
 # See https://rubinius-binaries-rubinius-com.s3-us-west-2.amazonaws.com/
+#
+# Note: travis-ci uses precise by default
 dist: trusty
 
 rvm:
