--- a/.travis.yml
+++ b/.travis.yml
@@ -13,8 +13,9 @@ sudo: required
 dist: trusty
 
 rvm:
-  - 2.0.0
-  - 2.1.2
-  - 2.4.0
+  - 2.2.10
+  - 2.4.5
+  - 2.5.3
   - jruby
+  - rubinius-3.107
   - rubinius-3.69
