Add @obruening as a contributor

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -17,6 +17,15 @@
       "contributions": [
         "code"
       ]
+    },
+    {
+      "login": "obruening",
+      "name": "obruening",
+      "avatar_url": "https://avatars2.githubusercontent.com/u/146361?v=4",
+      "profile": "https://github.com/obruening",
+      "contributions": [
+        "code"
+      ]
     }
   ]
 }
