Add @reactive as a contributor

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -26,6 +26,15 @@
       "contributions": [
         "code"
       ]
+    },
+    {
+      "login": "reactive",
+      "name": "reactive",
+      "avatar_url": "https://avatars0.githubusercontent.com/u/49928?v=4",
+      "profile": "https://github.com/reactive",
+      "contributions": [
+        "code"
+      ]
     }
   ]
 }
