Add @axgle as a contributor

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -35,6 +35,15 @@
       "contributions": [
         "code"
       ]
+    },
+    {
+      "login": "axgle",
+      "name": "axgle",
+      "avatar_url": "https://avatars2.githubusercontent.com/u/21093?v=4",
+      "profile": "https://github.com/axgle",
+      "contributions": [
+        "code"
+      ]
     }
   ]
 }
