--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -44,6 +44,15 @@
       "contributions": [
         "code"
       ]
+    },
+    {
+      "login": "hipe",
+      "name": "Chip Malice",
+      "avatar_url": "https://avatars1.githubusercontent.com/u/22006?v=4",
+      "profile": "https://github.com/hipe",
+      "contributions": [
+        "code"
+      ]
     }
   ]
 }
