Add @MSNexploder as a contributor

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -53,6 +53,15 @@
       "contributions": [
         "code"
       ]
+    },
+    {
+      "login": "MSNexploder",
+      "name": "Stefan Stüben",
+      "avatar_url": "https://avatars3.githubusercontent.com/u/101456?v=4",
+      "profile": "https://github.com/MSNexploder",
+      "contributions": [
+        "code"
+      ]
     }
   ]
 }
