Add @NigelThorne as a contributor

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -62,6 +62,15 @@
       "contributions": [
         "code"
       ]
+    },
+    {
+      "login": "NigelThorne",
+      "name": "Nigel Thorne",
+      "avatar_url": "https://avatars0.githubusercontent.com/u/5942?v=4",
+      "profile": "http://www.nigelthorne.com",
+      "contributions": [
+        "code"
+      ]
     }
   ]
 }
