--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -71,6 +71,15 @@
       "contributions": [
         "code"
       ]
+    },
+    {
+      "login": "rolftimmermans",
+      "name": "Rolf Timmermans",
+      "avatar_url": "https://avatars1.githubusercontent.com/u/78237?v=4",
+      "profile": "https://github.com/rolftimmermans",
+      "contributions": [
+        "code"
+      ]
     }
   ]
 }
