Add @jonelf as a contributor

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -80,6 +80,15 @@
       "contributions": [
         "code"
       ]
+    },
+    {
+      "login": "jonelf",
+      "name": "Jonas Elfström",
+      "avatar_url": "https://avatars3.githubusercontent.com/u/359500?v=4",
+      "profile": "http://alicebobandmallory.com/",
+      "contributions": [
+        "code"
+      ]
     }
   ]
 }
