Add @oupo as a contributor

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -89,6 +89,15 @@
       "contributions": [
         "code"
       ]
+    },
+    {
+      "login": "oupo",
+      "name": "oupo",
+      "avatar_url": "https://avatars1.githubusercontent.com/u/143470?v=4",
+      "profile": "https://github.com/oupo",
+      "contributions": [
+        "code"
+      ]
     }
   ]
 }
