Add @markus1189 as a contributor

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -109,6 +109,15 @@
         "design",
         "doc"
       ]
+    },
+    {
+      "login": "markus1189",
+      "name": "Markus Hauck",
+      "avatar_url": "https://avatars0.githubusercontent.com/u/591567?v=4",
+      "profile": "https://github.com/markus1189",
+      "contributions": [
+        "code"
+      ]
     }
   ]
 }
