Add @khalilfazal as a contributor

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -118,6 +118,15 @@
       "contributions": [
         "code"
       ]
+    },
+    {
+      "login": "khalilfazal",
+      "name": "Khalil Fazal",
+      "avatar_url": "https://avatars2.githubusercontent.com/u/308027?v=4",
+      "profile": "https://github.com/khalilfazal",
+      "contributions": [
+        "code"
+      ]
     }
   ]
 }
