--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -127,6 +127,15 @@
       "contributions": [
         "code"
       ]
+    },
+    {
+      "login": "kachick",
+      "name": "Kenichi Kamiya",
+      "avatar_url": "https://avatars2.githubusercontent.com/u/1180335?v=4",
+      "profile": "https://github.com/kachick",
+      "contributions": [
+        "code"
+      ]
     }
   ]
 }
