--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -136,6 +136,15 @@
       "contributions": [
         "code"
       ]
+    },
+    {
+      "login": "nevenh",
+      "name": "Neven Has",
+      "avatar_url": "https://avatars0.githubusercontent.com/u/1448453?v=4",
+      "profile": "https://github.com/nevenh",
+      "contributions": [
+        "code"
+      ]
     }
   ]
 }
