Add @AndrewKvalheim as a contributor

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -145,6 +145,15 @@
       "contributions": [
         "code"
       ]
+    },
+    {
+      "login": "AndrewKvalheim",
+      "name": "Andrew",
+      "avatar_url": "https://avatars1.githubusercontent.com/u/1844746?v=4",
+      "profile": "https://Andrew.Kvalhe.im",
+      "contributions": [
+        "code"
+      ]
     }
   ]
 }
