Add @dznz as a contributor

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -154,6 +154,15 @@
       "contributions": [
         "code"
       ]
+    },
+    {
+      "login": "dznz",
+      "name": "Daniel Zollinger",
+      "avatar_url": "https://avatars3.githubusercontent.com/u/245206?v=4",
+      "profile": "https://github.com/dznz",
+      "contributions": [
+        "code"
+      ]
     }
   ]
 }
