Add @guilhermesimoes as a contributor

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -163,6 +163,15 @@
       "contributions": [
         "code"
       ]
+    },
+    {
+      "login": "guilhermesimoes",
+      "name": "Guilherme Simoes",
+      "avatar_url": "https://avatars0.githubusercontent.com/u/531168?v=4",
+      "profile": "https://guilhermesimoes.github.io",
+      "contributions": [
+        "code"
+      ]
     }
   ]
 }
