Add @OrelSokolov as a contributor

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -172,6 +172,15 @@
       "contributions": [
         "code"
       ]
+    },
+    {
+      "login": "OrelSokolov",
+      "name": "Oleg Orlov",
+      "avatar_url": "https://avatars0.githubusercontent.com/u/2205407?v=4",
+      "profile": "https://github.com/OrelSokolov",
+      "contributions": [
+        "code"
+      ]
     }
   ]
 }
