Add @gkop as a contributor

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -181,6 +181,15 @@
       "contributions": [
         "code"
       ]
+    },
+    {
+      "login": "gkop",
+      "name": "Gabe Kopley",
+      "avatar_url": "https://avatars3.githubusercontent.com/u/222582?v=4",
+      "profile": "https://www.instagram.com/stewiecutedog/",
+      "contributions": [
+        "code"
+      ]
     }
   ]
 }
