Add @shepmaster as a contributor

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -190,6 +190,15 @@
       "contributions": [
         "code"
       ]
+    },
+    {
+      "login": "shepmaster",
+      "name": "Jake Goulding",
+      "avatar_url": "https://avatars0.githubusercontent.com/u/174509?v=4",
+      "profile": "http://jakegoulding.com",
+      "contributions": [
+        "code"
+      ]
     }
   ]
 }
