--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -199,6 +199,15 @@
       "contributions": [
         "code"
       ]
+    },
+    {
+      "login": "hirochachacha",
+      "name": "hirochachacha",
+      "avatar_url": "https://avatars0.githubusercontent.com/u/898442?v=4",
+      "profile": "https://github.com/hirochachacha",
+      "contributions": [
+        "code"
+      ]
     }
   ]
 }
