--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -217,6 +217,15 @@
       "contributions": [
         "code"
       ]
+    },
+    {
+      "login": "jergason",
+      "name": "Jamison Dance",
+      "avatar_url": "https://avatars1.githubusercontent.com/u/72027?v=4",
+      "profile": "https://jamison.dance",
+      "contributions": [
+        "code"
+      ]
     }
   ]
 }
