Add @josephholsten as a contributor

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -226,6 +226,15 @@
       "contributions": [
         "code"
       ]
+    },
+    {
+      "login": "josephholsten",
+      "name": "Joseph Anthony Pasquale Holsten",
+      "avatar_url": "https://avatars3.githubusercontent.com/u/7495?v=4",
+      "profile": "http://josephholsten.com",
+      "contributions": [
+        "code"
+      ]
     }
   ]
 }
