Add @mfcabrera as a contributor

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -235,6 +235,15 @@
       "contributions": [
         "code"
       ]
+    },
+    {
+      "login": "mfcabrera",
+      "name": "Miguel Cabrera",
+      "avatar_url": "https://avatars0.githubusercontent.com/u/12527?v=4",
+      "profile": "http://mfcabrera.com",
+      "contributions": [
+        "code"
+      ]
     }
   ]
 }
