--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -244,6 +244,15 @@
       "contributions": [
         "code"
       ]
+    },
+    {
+      "login": "miketheman",
+      "name": "Mike Fiedler",
+      "avatar_url": "https://avatars0.githubusercontent.com/u/529516?v=4",
+      "profile": "http://www.miketheman.net",
+      "contributions": [
+        "code"
+      ]
     }
   ]
 }
