Add @nathanl as a contributor

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -253,6 +253,15 @@
       "contributions": [
         "code"
       ]
+    },
+    {
+      "login": "nathanl",
+      "name": "Nathan Long",
+      "avatar_url": "https://avatars2.githubusercontent.com/u/338814?v=4",
+      "profile": "http://nathanmlong.com",
+      "contributions": [
+        "code"
+      ]
     }
   ]
 }
