--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -262,6 +262,15 @@
       "contributions": [
         "code"
       ]
+    },
+    {
+      "login": "olleolleolle",
+      "name": "Olle Jonsson",
+      "avatar_url": "https://avatars0.githubusercontent.com/u/211?v=4",
+      "profile": "http://ollehost.dk/",
+      "contributions": [
+        "code"
+      ]
     }
   ]
 }
