--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -280,6 +280,15 @@
       "contributions": [
         "code"
       ]
+    },
+    {
+      "login": "reiz",
+      "name": "Robert Reiz",
+      "avatar_url": "https://avatars0.githubusercontent.com/u/652130?v=4",
+      "profile": "https://www.versioneye.com",
+      "contributions": [
+        "code"
+      ]
     }
   ]
 }
