Add @coding46 as a contributor

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -289,6 +289,15 @@
       "contributions": [
         "code"
       ]
+    },
+    {
+      "login": "coding46",
+      "name": "Göran Bodenschatz",
+      "avatar_url": "https://avatars2.githubusercontent.com/u/1724196?v=4",
+      "profile": "http://46halbe.de",
+      "contributions": [
+        "code"
+      ]
     }
   ]
 }
