Add @hsbt as a contributor

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -298,6 +298,15 @@
       "contributions": [
         "code"
       ]
+    },
+    {
+      "login": "hsbt",
+      "name": "SHIBATA Hiroshi",
+      "avatar_url": "https://avatars1.githubusercontent.com/u/12301?v=4",
+      "profile": "https://www.hsbt.org/",
+      "contributions": [
+        "code"
+      ]
     }
   ]
 }
