Add @moracca as a contributor

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -307,6 +307,15 @@
       "contributions": [
         "code"
       ]
+    },
+    {
+      "login": "moracca",
+      "name": "moracca",
+      "avatar_url": "https://avatars1.githubusercontent.com/u/7213746?v=4",
+      "profile": "https://github.com/moracca",
+      "contributions": [
+        "code"
+      ]
     }
   ]
 }
