--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -180,7 +180,8 @@
       "avatar_url": "https://avatars1.githubusercontent.com/u/72027?v=4",
       "profile": "https://jamison.dance",
       "contributions": [
-        "code"
+        "code",
+        "doc"
       ]
     },
     {
