Update @nathanl as a contributor

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -217,7 +217,8 @@
       "avatar_url": "https://avatars2.githubusercontent.com/u/338814?v=4",
       "profile": "http://nathanmlong.com",
       "contributions": [
-        "code"
+        "code",
+        "doc"
       ]
     },
     {
