--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -227,7 +227,8 @@
       "avatar_url": "https://avatars0.githubusercontent.com/u/211?v=4",
       "profile": "http://ollehost.dk/",
       "contributions": [
-        "code"
+        "code",
+        "doc"
       ]
     },
     {
